better-responsive-complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>floatingworld</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/image/png/fav-con.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
         integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
@@ -32,9 +33,12 @@
                     class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto max-[650px]:text-[70px] max-[650px]:leading-[70px] max-[425px]:text-[50px] max-[425px]:leading-[50px]">
                     Scale &
                     grow with ease</p>
-                <p class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px] max-[495px]:text-[16px]">Monthly web
+                <p
+                    class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px] max-[495px]:text-[16px]">
+                    Monthly web
                     maintenance packages for businesses. Cancel anytime</p>
-                <button class="px-[49px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
+                <button
+                    class="px-[49px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
             bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[40px] max-[500px]:py-[7.5px] max-[500px]:px-[26px] max-[500px]:text-[14px] max-[500px]:mt-[30px]">See
                     Plans</button>
                 <div class="flex gap-[13px] justify-center mt-[21px]">
@@ -107,10 +111,12 @@
                 reinvent
                 the wheel. Just web
                 support</h2>
-            <p class="mx-w-[668px] font-medium text-[26px] leading-[100%] text-center m-0">Expert Website Scaling,
+            <p
+                class="mx-w-[668px] font-medium text-[26px] leading-[100%] text-center m-0 max-[670px]:text-[50px] max-[670px]:leading-[67px] max-[560px]:text-[30px] max-[560px]:leading-[47px]">
+                Expert Website Scaling,
                 Maintenance, & AI Integration </p>
             <div class="flex flex-wrap flex-row mx-[-12px] mt-[70px]">
-                <div class="w-1/3 px-[12px]">
+                <div class="w-1/3  px-[12px]">
                     <div class="flex flex-col items-center justify-center w-full">
                         <img class="mb-[41px]" src="./assets/image/svg/verify-circle.svg" alt="verify-circle">
                         <p class="font-medium text-[22px] leading-[100%] text-center max-w-[354px] tracking-[-1px] m-0">
@@ -118,7 +124,7 @@
                             monthly proactive web maintenance</p>
                     </div>
                 </div>
-                <div class="w-1/3 px-[12px]">
+                <div class="w-1/3  px-[12px]">
                     <div class="flex flex-col items-center justify-center w-full">
                         <img class="mb-[41px]" src="./assets/image/svg/recieve-svg.svg" alt="recieve-svg">
                         <p class="font-medium text-[22px] leading-[32px] text-center max-w-[376px] tracking-[-1px] m-0">
@@ -126,7 +132,7 @@
                             e-commerce optimization, traffic scaling, security & server cost management</p>
                     </div>
                 </div>
-                <div class="w-1/3 px-[12px]">
+                <div class="w-1/3  px-[12px]">
                     <div class="flex flex-col items-center justify-center w-full">
                         <img class="mb-[30px]" src="./assets/image/svg/tailor-svg.svg" alt="tailor-svg">
                         <p class="font-medium text-[22px] leading-[32px] text-center max-w-[376px] m-0">
@@ -163,21 +169,24 @@
     </section> -->
 
     <!--Section-better-->
-    <!-- <section class="bg-[#F5F5F5] pt-[110px] pb-[119px]">
+    <section class="bg-[#F5F5F5] pt-[110px] pb-[119px] max-[500px]:pb-[50px] max-[500px]:pt-[50px]">
         <div class="container mx-auto">
             <div>
-                <h2 class="font-extrabold text-[67px] leading-[73px] max-w-[614px] text-center mx-auto ">It’s “you’ll
+                <h2
+                    class="font-extrabold text-[67px] leading-[73px] max-w-[614px] text-center mx-auto max-[500px]:text-[40px] max-[500px]:leading-[51px]">
+                    It’s “you’ll
                     never go back” better</h2>
                 <p
-                    class="font-medium text-[26px] leading-[36px] max-w-[732px] text-center mx-auto tracking-[1px] m-0 pt-[33px]">
+                    class="font-medium text-[26px] leading-[36px] max-w-[732px] text-center mx-auto tracking-[1px] m-0 pt-[33px] max-[500px]:text-[18px] max-[500px]:leading-[27px] max-[500px]:pt-[20px]">
                     Floatingworld replaces unreliable freelancers and expensive agencies for one flat monthly fee, with
                     unwavering (fanatical?) support that will blow your mind.</p>
-                <button class="px-[53px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
-                    bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[72px]">See
+                <button
+                    class="px-[53px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
+                    bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[72px] max-[500px]:mt-[27px] max-[500px]:text-[14px] max-[500px]:py-[13.5px] max-[500px]:px-[27px]">See
                     Plans</button>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!--Section-6-->
     <!-- <section class="pt-[133px] pb-[138px]">
